--- a/ros-ws/src/nav_stack_tuning/package.xml
+++ b/ros-ws/src/nav_stack_tuning/package.xml
@@ -57,15 +57,26 @@
   <build_export_depend>move_base</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>tf</build_export_depend>
+
   <exec_depend>amcl</exec_depend>
   <exec_depend>move_base</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
+  <build_depend>nav_core</build_depend>
+  <exec_depend>nav_core</exec_depend>
 
+  <build_depend>"std_msgs"</build_depend>
+  <build_depend>"sensor_msgs"</build_depend>
+  <build_depend>"tf_conversions"</build_depend>
+  <build_depend>"visualization_msgs"</build_depend>
 
+  <exec_depend>"std_msgs"</exec_depend>
+  <exec_depend>"sensor_msgs"</exec_depend>
+  <exec_depend>"tf_conversions"</exec_depend>
+  <exec_depend>"visualization_msgs"</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+  <nav_core plugin="${prefix}/global_planner_plugin.xml" />
   </export>
 </package>
